--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "csv-parser": "^2.3.2",
     "express": "^4.17.1",
     "express-useragent": "^1.0.13",
+    "fast-csv": "^4.1.3",
+    "json2csv": "^5.0.0",
+    "json2csv-stream": "^0.1.4",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
